--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -17,3 +17,9 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+//Main Template colours
+$aqua:#00cecd;
+$lighestGrey:#1b1b1b;
+$darkerGrey:#1c1c1c;
+$darkerGrey:#1c1c1c;
