--- a/resources/sass/pages/test.scss
+++ b/resources/sass/pages/test.scss
@@ -1,10 +1,14 @@
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Nunito');
 // Variables
 @import 'variables';
+
+@import '~bootstrap/scss/bootstrap';
 
 .mainContentWrap {
   .something {
     p {
-      color: $red;
+      color: orange;
     }
   }
 }
