factored main template colours

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -19,7 +19,12 @@ $teal: #4dc0b5;
 $cyan: #6cb2eb;
 
 //Main Template colours
+$white:#ffffff;
+$darkerWhite:#f5f5f5;
+$darkestWhite: #ebebeb;
 $aqua:#00cecd;
 $lighestGrey:#1b1b1b;
 $darkerGrey:#1c1c1c;
 $darkerGrey:#1c1c1c;
+$black: #000000;
+$sunnyYellow: #fff568;
