--- a/resources/sass/pages/homepage.scss
+++ b/resources/sass/pages/homepage.scss
@@ -1,87 +1,13 @@
+
 // Full width
 $fullWidth: 100%;
 //center on page
 $centerOnPage:  auto;
 
 
-//HEADER SECTION
-.hRow{
-  @include flex;
-  @include alignItemsCenter;
-  @include headerHeight;
-}
+@import 'layout/header';
 
-.mainHeader {
-  width: $fullWidth / 1.2;
-  margin: $centerOnPage;
+@import 'layout/footer';
 
-}
 
-.mainHeaderWrap{
-  @include headerHeight;
-  background: $aqua;
-  width: $fullWidth;
-  margin: $centerOnPage;
-}
-
-.titleParent {
-  h1 {
-    font-size: 1.3em;
-    color:$white;
-  }
-}
-
-.mainNav{
-  ul{
-    @include flex;
-    li{
-      display:block;
-      a{
-        color: $white;
-        font-size: 1.3em;
-        padding: 0 15px;
-      }
-    }
-  }
-}
-
-//BANNER SECTION
-.bannerParent{
-  width: 100%;
-  height: auto;
-}
-
-.banner{
-  width:$fullWidth;
-  height: 521px;
-  background-image:
-          linear-gradient(to bottom, rgba(0, 206, 205, 0.52), rgba(139, 219, 219, 0.73)),
-          url('../images/banner.jpg');
-  margin:$centerOnPage;
-  background-repeat:no-repeat;
-  background-size:cover;
-}
-
-//FOOTER SECTION
-.mainFooter{
-  height: 73px;
-  background: $footerGrey;
-}
-.footerCreds{
-  width: $fullWidth;
-  margin: auto;
-}
-
-.footerCreds, .credLinks{
-  @include flex;
-
-}
-
-.footerCreds, .credLinks, .credLinks a, .footerCreds a{
-  color: $white;
-}
-
-.credLinks li{
-  list-style:none;
-}
 
