Re-organised css files and adjusted the webpack file to only include the app.scss

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,7 +6,9 @@
 
 @import 'pages/homepage';
 
+@import 'layout/header';
 
+@import 'layout/footer';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
