--- a/resources/sass/layout/header.scss
+++ b/resources/sass/layout/header.scss
@@ -49,6 +49,13 @@
   }
 }
 
+.fa-chevron-down{
+  color: $white;
+  position:$relative;
+  left: 5px;
+
+}
+
 //BANNER SECTION
 .bannerParent{
   width: 100%;
