--- a/resources/sass/layout/header.scss
+++ b/resources/sass/layout/header.scss
@@ -143,3 +143,42 @@ select, input{
   height: 30px;
   border-radius: 7px;
 }
+
+//WHY CHOOSE SECTION
+.whyChooseParent{
+  width: $fullWidth / 1.2;
+  margin: 100px auto;
+}
+.whyChoose{
+  @include flex;
+
+  p{
+    width: 589px;
+    height: 239px;
+    color: #1b1b1b;
+    font-size: 20px;
+    font-weight: 400;
+    letter-spacing: -1px;
+    line-height: 34px;
+  }
+}
+
+.chooseText, .chooseVideo{
+  @include uniformAlignment;
+}
+.pageTitle{
+  font-size: 34px;
+}
+
+//HOW SECTION
+.howSectionParent{
+  width: $fullWidth / 1.2;
+  margin: 100px auto;
+}
+.howSection{
+  @include flex;
+  @include justify-content($value: space-between);
+}
+.iconTitle, .iconDescription{
+  width:200px;
+}
