Created logo for both header section and footer section

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,6 +14,7 @@
 @import 'components/banner';
 @import 'components/whychoose';
 @import 'components/howsection';
+@import 'components/healthchoice';
 
 
 
