--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,6 +4,20 @@
 
 .titleParent {
   position: relative;
+  top: -25px;
+}
+
+.titleParent .logo {
+  width: 6.6666666667%;
+  position: absolute;
+  top: 0px;
+  left: 0;
+}
+
+.titleParent h1 {
+  position: absolute;
+  top: 13px;
+  left: 55px;
 }
 
 .fa-cross {
@@ -31,6 +45,10 @@
   background: #00cecd;
   width: 100%;
   margin: auto;
+}
+
+.titleParent {
+  position: relative;
 }
 
 .titleParent h1 {
@@ -172,9 +190,31 @@ input {
   padding-right: 17px;
 }
 
+.socialList {
+  margin-top: 40px;
+}
+
 .social li:last-child {
   margin-left: 220px;
   padding-top: 20px;
+}
+
+.titleParentFooter {
+  position: relative;
+  top: -25px;
+}
+
+.titleParentFooter .logoFooter {
+  width: 8.3333333333%;
+  position: absolute;
+  top: 15px;
+  left: 0;
+}
+
+.titleParentFooter h1 {
+  position: absolute;
+  top: 13px;
+  left: 55px;
 }
 
 .bannerParent {
@@ -292,6 +332,27 @@ input {
 .iconTitle,
 .iconDescription {
   width: 200px;
+}
+
+.chooseHealthParent {
+  width: 83.3333333333%;
+  margin: 100px auto;
+}
+
+.chooseHealth {
+  height: 401px;
+  background: linear-gradient(to bottom, rgba(0, 206, 205, 0.52), rgba(139, 219, 219, 0.73)), url(/images/placeholder.jpg?fc4fd8e4e17caf863e20c9bb6db69efc);
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 20px;
+}
+
+.chooseHealthText {
+  width: 71.4285714286%;
+  margin: 100px auto;
+  color: #ffffff;
+  position: relative;
+  top: 150px;
 }
 
 /*!
