Finished the homepage layout..Still have to modularise both the logo and the button

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,6 +15,7 @@
 @import 'components/whychoose';
 @import 'components/howsection';
 @import 'components/healthchoice';
+@import 'components/blogs';
 
 
 
