--- a/public/css/app.css
+++ b/public/css/app.css
@@ -355,6 +355,15 @@ input {
   top: 150px;
 }
 
+.blogSectionParent {
+  width: 83.3333333333%;
+  margin: auto;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+}
+
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
