--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,22 +2,35 @@
 
 /* Align Items - Center */
 
-.titleParent {
+.blueOval {
+  background-image: linear-gradient(270deg, #649ef7 0%, #4087f5 56%, #1b70f3 100%);
+}
+
+.greenOval {
+  background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%);
+  width: 219px;
+  height: 58px;
+  border-radius: 31px;
+}
+
+.headerLogoParent {
   position: relative;
   top: -25px;
 }
 
-.titleParent .logo {
+.headerLogoParent .headerLogoImg {
   width: 6.6666666667%;
   position: absolute;
   top: 0px;
   left: 0;
 }
 
-.titleParent h1 {
+.headerLogoParent .headerLogoTitle {
   position: absolute;
-  top: 13px;
+  top: 10px;
   left: 55px;
+  color: #ffffff;
+  font-size: 24px;
 }
 
 .fa-cross {
@@ -199,19 +212,19 @@ input {
   padding-top: 20px;
 }
 
-.titleParentFooter {
+.footerLogoParent {
   position: relative;
   top: -25px;
 }
 
-.titleParentFooter .logoFooter {
+.footerLogoParent .footerLogoImg {
   width: 8.3333333333%;
   position: absolute;
   top: 15px;
   left: 0;
 }
 
-.titleParentFooter h1 {
+.footerLogoParent .footerLogoTitle {
   position: absolute;
   top: 13px;
   left: 55px;
@@ -277,13 +290,6 @@ input {
 
 .promoList li {
   list-style: none;
-}
-
-.findHospital a {
-  background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%);
-  width: 219px;
-  height: 58px;
-  border-radius: 31px;
 }
 
 .whyChooseParent {
