--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -94,3 +94,16 @@ $footerGrey: #363636;
 //POSITIONS
 $relative: relative;
 $absolute: absolute;
+
+
+//BUTTONS
+.blueOval{
+  background-image: linear-gradient(270deg, #649ef7 0%, #4087f5 56%, #1b70f3 100%);
+}
+
+.greenOval{
+  background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%);
+  width: 219px;
+  height: 58px;
+  border-radius: 31px;
+}
