--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -45,7 +45,7 @@ $footerGrey: #363636;
 }
 
 /* Align Items - Center */
-@mixin alignItemsCenter {
+@mixin alignItems {
   -webkit-box-align: center;
   -moz-box-align: center;
   -ms-flex-align: center;
@@ -90,6 +90,12 @@ $footerGrey: #363636;
   -ms-flex: 2 1 100px;
 }
 
+@mixin flexBasis{
+    flex: 0 0 45%;
+   -webkit-flex: 0 0 45%;
+   -ms-flex: 0 0 45%;
+}
+
 
 //POSITIONS
 $relative: relative;
@@ -97,8 +103,16 @@ $absolute: absolute;
 
 
 //BUTTONS
+.hospBtn{
+  padding: 0.5rem 1rem;
+  font-size: 1.125rem;
+  line-height: 1.5;
+  border-radius: 24px;
+  color: $white;
+}
 .blueOval{
   background-image: linear-gradient(270deg, #649ef7 0%, #4087f5 56%, #1b70f3 100%);
+
 }
 
 .greenOval{
@@ -106,4 +120,5 @@ $absolute: absolute;
   width: 219px;
   height: 58px;
   border-radius: 31px;
+  border-radius: 24px;
 }
