--- a/resources/sass/components/blogs.scss
+++ b/resources/sass/components/blogs.scss
@@ -20,10 +20,14 @@
 }
 
 .buttonSectionParent p:nth-child(2) {
-  margin-left: 230px;
-  margin-right: 150px;
+  margin-left: 250px;
+
 }
 
+.buttonSectionParent p:nth-child(3) {
+  margin-left: 250px;
+
+}
 
 
 
