--- a/resources/sass/components/whychoose.scss
+++ b/resources/sass/components/whychoose.scss
@@ -22,7 +22,11 @@
 }
 .pageTitle{
   font-size: 34px;
+  font-weight:600;
 }
 .icon{
   margin-bottom:20px;
+  img{
+    padding-left: 40px;
+  }
 }
