--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -44,6 +44,14 @@ $footerGrey: #363636;
   display: flex;
 }
 
+//shorthand flex-direction and flex-wrap
+@mixin flex-flow($values: (row nowrap)) {
+  // No Webkit/FF Box fallback.
+  -webkit-flex-flow: $values;
+  -ms-flex-flow: $values;
+  flex-flow: $values;
+}
+
 /* Align Items - Center */
 @mixin alignItems {
   -webkit-box-align: center;
@@ -53,6 +61,7 @@ $footerGrey: #363636;
   align-items: center;
 }
 
+//main axis alignment
 @mixin justify-content($value: flex-start) {
 
   @if $value == flex-start {
