finished choose your health background image alignment on the homepage

--- a/resources/sass/components/howsection.scss
+++ b/resources/sass/components/howsection.scss
@@ -6,6 +6,8 @@
 .howSection{
   @include flex;
   @include justify-content($value: space-between);
+  position: relative;
+  left: -70px;
 }
 .iconTitle, .iconDescription{
   width:89%;
