--- a/public/css/app.css
+++ b/public/css/app.css
@@ -351,6 +351,8 @@ input {
   display: flex;
   -webkit-justify-content: space-between;
   justify-content: space-between;
+  position: relative;
+  left: -70px;
 }
 
 .iconTitle,
@@ -386,18 +388,21 @@ input {
 
 .chooseHealth {
   height: 401px;
-  background: linear-gradient(to bottom, rgba(0, 206, 205, 0.52), rgba(139, 219, 219, 0.73)), url(/images/placeholder.jpg?fc4fd8e4e17caf863e20c9bb6db69efc);
+  background: url(/images/placeholder.jpg?d11a006dce88176b273025681118c15b);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position-y: -20px;
   border-radius: 20px;
 }
 
 .chooseHealthText {
-  width: 71.4285714286%;
-  margin: 100px auto;
+  width: 55.5555555556%;
+  margin: 80px auto;
   color: #ffffff;
   position: relative;
   top: 150px;
+  font-size: 1.5em;
+  font-weight: 500;
 }
 
 .chooseHealthText p {
