--- a/resources/sass/components/healthchoice.scss
+++ b/resources/sass/components/healthchoice.scss
@@ -6,19 +6,21 @@
 
 .chooseHealth{
   height: 401px;
-  background: linear-gradient(to bottom, rgba(0, 206, 205, 0.52), rgba(139, 219, 219, 0.73)),
-  url('../images/placeholder.jpg');
+  background: url('../images/placeholder.jpg');
   background-repeat:no-repeat;
   background-size:cover;
+  background-position-y: -20px;
   border-radius: 20px;
 }
 
 .chooseHealthText{
-  width:$fullWidth / 1.4;
-  margin: 100px auto;
+  width:$fullWidth / 1.8;
+  margin: 80px auto;
   color:$white;
   position: relative;
   top: 150px;
+  font-size: 1.5em;
+  font-weight: 500;
 }
 
 .chooseHealthText p{
