--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14,12 +14,29 @@
   background-image: linear-gradient(270deg, #649ef7 0%, #4087f5 56%, #1b70f3 100%);
 }
 
+.blueOval:hover {
+  color: #ffffff;
+  text-decoration: none;
+  background: #1b71f3;
+  background: linear-gradient(90deg, #1b71f3, #1b71f3, #00cecd);
+}
+
 .greenOval {
   background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%);
   width: 219px;
   height: 58px;
   border-radius: 31px;
   border-radius: 24px;
+  letter-spacing: -1.1px;
+  line-height: 24px;
+  padding: 15px 40px;
+}
+
+.greenOval:hover {
+  background: #00e09d;
+  background: linear-gradient(90deg, #00e09d, #00cecd, #00e09d);
+  color: #ffffff;
+  text-decoration: none;
 }
 
 .headerLogoParent {
@@ -305,9 +322,79 @@ input {
   line-height: 40px;
 }
 
+.browseButton {
+  text-align: center;
+  font-size: 1.2em;
+}
+
+.browseButton a {
+  color: #1c1c1c;
+}
+
+.secondChevron {
+  color: #00cecd;
+  position: relative;
+  top: 0px;
+  left: -30px;
+}
+
+select,
+input {
+  width: 445px;
+  height: 61px;
+}
+
+input,
+button,
+select,
+optgroup,
+textarea {
+  margin: 0;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  margin-left: 7% !important;
+  margin-bottom: 20px !important;
+}
+
+select {
+  border: 2px solid #ebebeb;
+  /*Removes border*/
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  text-overflow: "";
+  text-indent: 0.01px;
+  /* Removes default arrow from firefox*/
+  text-overflow: "";
+  /*Removes default arrow from firefox*/
+}
+
+select::-ms-expand {
+  display: none;
+}
+
+.select-wrapper {
+  padding-left: 0px;
+  overflow: hidden;
+}
+
+input {
+  border: 2px solid #ebebeb;
+}
+
 .whyChooseParent {
+  width: 100%;
+  height: auto;
+  background: #ececec;
+}
+
+.whyChooseContent {
   width: 83.3333333333%;
-  margin: 100px auto;
+  margin: auto;
+  padding-top: 80px;
 }
 
 .whyChoose {
@@ -339,6 +426,16 @@ input {
 
 .icon {
   margin-bottom: 20px;
+}
+
+.playerButton {
+  background-image: url(/images/player_button.png?180c959869d99b858b10bfb52ee13007);
+  position: relative;
+  top: -240px;
+  z-index: 999999999;
+  height: 100px;
+  background-repeat: no-repeat;
+  left: 200px;
 }
 
 .howSectionParent {
