--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,4 +1,5 @@
 // Body
+
 $body-bg: #f8fafc;
 
 // Typography
@@ -25,10 +26,10 @@ $darkestWhite: #ebebeb;
 $aqua:#00cecd;
 $lighestGrey:#1b1b1b;
 $darkerGrey:#1c1c1c;
-$darkerGrey:#1c1c1c;
 $black: #000000;
 $sunnyYellow: #fff568;
 $footerGrey: #363636;
+$sectionBeige: #ececec;
 
 //Header section
 @mixin headerHeight {
@@ -119,15 +120,37 @@ $absolute: absolute;
   border-radius: 24px;
   color: $white;
 }
+
+
+
 .blueOval{
   background-image: linear-gradient(270deg, #649ef7 0%, #4087f5 56%, #1b70f3 100%);
+}
 
+.blueOval:hover{
+  color: $white;
+  text-decoration:none;
+  background: #1b71f3;
+  background: -webkit-linear-gradient(legacy-direction(90deg), #1b71f3,#1b71f3,#00cecd);
+  background: linear-gradient(90deg, #1b71f3,#1b71f3,#00cecd);
 }
 
 .greenOval{
   background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%);
+
   width: 219px;
   height: 58px;
   border-radius: 31px;
   border-radius: 24px;
+  letter-spacing: -1.1px;
+  line-height: 24px;
+  padding: 15px 40px;
+}
+
+.greenOval:hover {
+  background: #00e09d;
+  background: -webkit-linear-gradient(legacy-direction(90deg), #00e09d,#00cecd,#00e09d);
+  background: linear-gradient(90deg, #00e09d,#00cecd,#00e09d);
+  color: $white;
+  text-decoration:none;
 }
