--- a/resources/sass/layout/footer.scss
+++ b/resources/sass/layout/footer.scss
@@ -119,3 +119,15 @@
   }
 }
 
+//Back to top styles
+.backTopHolder{
+  height: 30px;
+  width:$fullWidth / 1.2;
+  margin: auto;
+}
+
+.backTopContent{
+  width:150px;
+  float:right;
+}
+
