--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14,6 +14,11 @@
   background-image: linear-gradient(270deg, #649ef7 0%, #4087f5 56%, #1b70f3 100%);
 }
 
+.greenOvalTop {
+  background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%);
+  border-radius: 12px 12px 0 0;
+}
+
 .blueOval:hover {
   color: #ffffff;
   text-decoration: none;
@@ -32,16 +37,32 @@
   padding: 15px 40px;
 }
 
-.greenOval:hover {
+.greenOval:hover,
+.greenOvalTop:hover {
   background: #00e09d;
   background: linear-gradient(90deg, #00e09d, #00cecd, #00e09d);
   color: #ffffff;
   text-decoration: none;
 }
 
-.blueOvalTop {
-  background-image: linear-gradient(270deg, #649ef7 0%, #4087f5 56%, #1b70f3 100%);
-  border-radius: 12px 12px 0 0;
+.secondSelect {
+  display: -webkit-flex;
+  display: flex;
+}
+
+.selectBox {
+  color: #1c1c1c;
+  flex: 0 0 45%;
+  -webkit-flex: 0 0 45%;
+  -ms-flex: 0 0 45%;
+  position: relative;
+  left: 40px;
+}
+
+#lessWideSelect {
+  flex: 0 0 45%;
+  -webkit-flex: 0 0 45%;
+  -ms-flex: 0 0 45%;
 }
 
 .headerLogoParent {
@@ -348,10 +369,17 @@ input {
   color: #1c1c1c;
 }
 
-.secondChevron {
+.firstChevron {
   color: #00cecd;
   position: relative;
   top: 0px;
+  left: -30px;
+}
+
+.secondChevron {
+  color: #00cecd;
+  position: relative;
+  top: 20px;
   left: -30px;
 }
 
