--- a/resources/sass/components/banner.scss
+++ b/resources/sass/components/banner.scss
@@ -78,10 +78,17 @@
 
 }
 
-.secondChevron{
+.firstChevron{
   color: $aqua;
   position:relative;
   top:0px;
+  left: -30px;
+}
+
+.secondChevron{
+  color: $aqua;
+  position:relative;
+  top:20px;
   left: -30px;
 }
 
