--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -125,6 +125,7 @@ $absolute: absolute;
 
 .blueOval{
   background-image: linear-gradient(270deg, #649ef7 0%, #4087f5 56%, #1b70f3 100%);
+  padding: 15px 40px;
 }
 
 .greenOvalTop{
