modularised sections: blogs, selectbox, howsection

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,7 +15,12 @@
 @import 'components/whychoose';
 @import 'components/howsection';
 @import 'components/healthchoice';
-@import 'components/blogs';
+
+//BASIC COMPONENTS
+@import 'components/basic/blogs';
+@import 'components/basic/button';
+@import 'components/basic/selectbox';
+@import 'components/basic/textbox';
 
 
 
