Finished general Homepage Layout.. Modularised Template logic

--- a/resources/sass/components/banner.scss
+++ b/resources/sass/components/banner.scss
@@ -78,17 +78,17 @@
 
 }
 
-.firstChevron{
+.bannerChevron1{
   color: $aqua;
   position:relative;
-  top:4px;
+  top:2px;
   left: -30px;
 }
 
-.secondChevron{
+.bannerChevron2{
   color: $aqua;
   position:relative;
-  top:20px;
+  top:15px;
   left: -30px;
 }
 
