--- a/public/css/app.css
+++ b/public/css/app.css
@@ -306,17 +306,17 @@ input {
   color: #1c1c1c;
 }
 
-.firstChevron {
+.bannerChevron1 {
   color: #00cecd;
   position: relative;
-  top: 4px;
+  top: 2px;
   left: -30px;
 }
 
-.secondChevron {
+.bannerChevron2 {
   color: #00cecd;
   position: relative;
-  top: 20px;
+  top: 15px;
   left: -30px;
 }
 
