Finished general Homepage Layout.. Modularised Template logic, adjusted class names for re-use

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,9 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
+// Global CSS
+@import 'global';
+
 // Variables
 @import 'variables';
 
