--- a/public/css/app.css
+++ b/public/css/app.css
@@ -262,7 +262,7 @@ input {
   -ms-flex: 1 1 100px;
 }
 
-.homePostCodeBox {
+.box {
   width: 511px;
   height: 431px;
   border-radius: 20px;
@@ -270,7 +270,7 @@ input {
   opacity: 0.75;
 }
 
-.homePostCodeBox p {
+.box p {
   color: #000000;
   font-size: 1.3em;
   width: 50%;
@@ -306,18 +306,11 @@ input {
   color: #1c1c1c;
 }
 
-.bannerChevron1 {
+.aquaChevron {
   color: #00cecd;
   position: relative;
-  top: 2px;
   left: -30px;
-}
-
-.bannerChevron2 {
-  color: #00cecd;
-  position: relative;
-  top: 15px;
-  left: -30px;
+  top: 3px;
 }
 
 .whyChooseParent {
@@ -492,6 +485,7 @@ input {
   line-height: 1.5;
   border-radius: 24px;
   color: #ffffff;
+  background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%);
 }
 
 .blueOval {
@@ -530,7 +524,11 @@ input {
   text-decoration: none;
 }
 
-.secondSelect {
+.selectParent {
+  position: relative;
+}
+
+.flexSelect {
   display: -webkit-flex;
   display: flex;
 }
@@ -544,10 +542,13 @@ input {
   left: 40px;
 }
 
-#lessWideSelect {
-  flex: 0 0 45%;
-  -webkit-flex: 0 0 45%;
-  -ms-flex: 0 0 45%;
+.lessWideSelect {
+  display: -webkit-flex;
+  display: flex;
+}
+
+.adjustPosition1 {
+  top: 15px;
 }
 
 select {
