--- a/resources/sass/components/basic/button.scss
+++ b/resources/sass/components/basic/button.scss
@@ -5,6 +5,7 @@
   line-height: 1.5;
   border-radius: 24px;
   color: $white;
+  background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%);
 }
 
 
