--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -31,6 +31,10 @@ $sunnyYellow: #fff568;
 $footerGrey: #363636;
 $sectionBeige: #ececec;
 
+// Full width
+$fullWidth: 100%;
+//center on page
+$centerOnPage:  auto;
 
 
 //POSITIONS
