--- a/resources/sass/components/basic/button.scss
+++ b/resources/sass/components/basic/button.scss
@@ -1,11 +1,14 @@
 //BUTTONS
 .hospBtn{
-  padding: 0.5rem 1rem;
   font-size: 1.125rem;
   line-height: 1.5;
   border-radius: 24px;
   color: $white;
   background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%);
+  width: $fullWidth;
+  text-align: center;
+  margin: auto;
+  padding-top: 10px;
 }
 
 
